<resources>
    <string name="app_name">IMDB Clone</string>
    <string name="action_settings">Settings</string>
    <string name="recommend">Bugün öne çıkanlar</string>
    <string name="watch_list">İzleme listesinden</string>
    <string name="show_all">TÜMÜNÜ GÖSTER</string>
    <string name="watch_list_bottom">İzleme listesinde izlenecek programlar ve filmler mevcut</string>
    <string name="users_likes_list">İzleyicilerin en sevdikleri</string>
    <string name="users_likes_bottom">Bu haftanın en iyi televizyon ve filmleri</string>
    <string name="add_button">İzleme listesine alındı</string>
    <string name="watch_button">Şimdi izle</string>
    <string name="main_item">Ana Sayfa</string>
    <string name="search_item">Ara</string>
    <string name="video_item">Video</string>
    <string name="person_item">Siz</string>
    <string name="rating_text">Bunu puanla</string>
    <string name="metascore">Metascore</string>
    <string name="actor_list">Oyuncu Kadrosu</string>
    <string name="actor_list_text">OYUNCU LİSTESİ</string>
    <string name="director_text">Yönetmen</string>
    <string name="author_text">Yazar</string>
</resources>