<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="movieData"
            type="com.example.imdbclone.data.model.Movies" />

        <variable
            name="medAdapter"
            type="com.example.imdbclone.ui.detail_screen.adapter.DetailFragmentAdapter" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="75dp"
        android:scrollbars="horizontal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_detay"
                android:theme="@style/AppTheme"
                app:title="@{movieData.title}"
                android:layout_width="match_parent"
                android:background="@color/white"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:menu="@menu/menu_main"
                app:navigationIcon="@drawable/back_pic"
                app:layout_constraintTop_toTopOf="parent">

            </androidx.appcompat.widget.Toolbar>

            <LinearLayout
                android:id="@+id/title_lay"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf ="@id/toolbar_detay"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/text_title"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textSize="32sp"
                    android:text="@{movieData.title}" />

                <TextView
                    android:id="@+id/text_year"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textSize="16sp"
                    android:text="@{movieData.relData}" />
            </LinearLayout>

            <ImageView
                android:id="@+id/image_movie"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:layout_constraintTop_toBottomOf ="@id/title_lay"
                app:imageResource = "@{movieData.pictures[0]}"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <RelativeLayout
                android:id="@+id/med_lay"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_movie">

                <ImageView
                    android:id="@+id/image_movie2"
                    android:layout_width="120dp"
                    android:layout_height="150dp"
                    app:imageResource = "@{movieData.pictures[1]}"
                    android:scaleType="fitXY" />
                <LinearLayout
                    android:layout_width="260dp"
                    android:layout_height="150dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:orientation="vertical">

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="42dp"
                        android:scrollbars="none">

                        <com.google.android.material.chip.ChipGroup
                            android:id="@+id/chip_group"
                            android:layout_width="wrap_content"
                            android:layout_height="42dp"
                            app:singleSelection="false"/>
                    </HorizontalScrollView>

                    <TextView
                        android:id="@+id/text_desc"
                        android:layout_width="match_parent"
                        android:layout_height="108dp"
                        android:text="@{movieData.des}"/>
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/score_lay"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/med_lay">

                <LinearLayout
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:orientation="vertical"
                    android:layout_alignParentStart="true">

                    <ImageView
                        android:id="@+id/image_star"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:src="@drawable/start_pic" />

                    <TextView
                        android:id="@+id/text_rating"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{movieData.rating}"
                        android:textAlignment="center" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="90dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="60dp"
                    android:orientation="vertical"
                    android:layout_centerInParent="true">

                    <ImageView
                        android:id="@+id/image_empty_star"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:src="@drawable/stared_pic"
                        app:tint="@color/blue" />

                    <TextView
                        android:id="@+id/text_rat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rating_text"
                        android:textAlignment="center"
                        android:textColor="@color/blue"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="90dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="60dp"
                    android:orientation="vertical"
                    android:layout_alignParentEnd="true">

                    <TextView
                        android:id="@+id/test_meta"
                        android:layout_width="20dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center_horizontal"
                        android:text="72"
                        android:textSize="16sp"
                        android:background="@color/green"/>

                    <TextView
                        android:paddingTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/metascore"
                        android:textAlignment="center" />

                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/score_lay">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_View9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/actor_list"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/text_View10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        android:textColor="@color/blue"
                        android:textAlignment="viewEnd"
                        android:text="@string/show_all" />
                </LinearLayout>

                <TextView

                    android:id="@+id/text_View11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/actor_list_text"
                    android:paddingTop="10dp"
                    android:textAlignment="textStart"
                    android:textColor="@color/yellow"
                    android:textSize="14sp" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_actor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:adapter="@{medAdapter}"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linearLayout2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recycler_actor">

                <TextView

                    android:id="@+id/text_y"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:textStyle="bold"
                    android:text="@string/director_text"
                    android:textAlignment="textStart"
                    android:textSize="18sp" />
                <TextView

                    android:id="@+id/text_director"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@{movieData.director}"
                    android:textAlignment="textStart"
                    android:textSize="14sp" />
                <TextView

                    android:id="@+id/text_a"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:paddingTop="10dp"
                    android:textStyle="bold"
                    android:text="@string/author_text"
                    android:textAlignment="textStart"
                    android:textSize="18sp" />
                <TextView

                    android:id="@+id/text_author"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@{movieData.author}"
                    android:textAlignment="textStart"
                    android:textSize="14sp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>